# celery-example

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
mysite/: accounts.py  manage.py
mysite/calculation/: admin.py  apps.py  models.py  serializer.py  service.py  task.py  views.py
mysite/calculation/migrations/: 0001_initial.py
mysite/celeryapp/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
mysite/mysite/: settings.py
