[tool.poetry]
name = "celery_example"
version = "0.1.0"
description = ""
authors = ["nana1243 <hieun1243@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
celery = "^5.2.3"
pydantic = "^1.9.0"
Django = "^4.0.2"
redis = "^4.1.2"

[tool.poetry.dev-dependencies]
yes24 = "yes"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
